--- a/resources/gtk/settings.glade
+++ b/resources/gtk/settings.glade
@@ -304,7 +304,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
-                <property name="spacing">6</property>
                 <child>
                   <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
@@ -323,8 +322,9 @@
                           <object class="GtkTreeViewColumn">
                             <property name="title" translatable="yes">Name</property>
                             <child>
-                              <object class="GtkCellRendererText">
+                              <object class="GtkCellRendererText" id="cellrenderertext_repositories_name">
                                 <property name="editable">True</property>
+                                <property name="placeholder_text">name</property>
                               </object>
                               <attributes>
                                 <attribute name="text">0</attribute>
@@ -336,8 +336,9 @@
                           <object class="GtkTreeViewColumn">
                             <property name="title" translatable="yes">URL</property>
                             <child>
-                              <object class="GtkCellRendererText">
+                              <object class="GtkCellRendererText" id="cellrenderertext_repositories_url">
                                 <property name="editable">True</property>
+                                <property name="placeholder_text">http://repository_url</property>
                               </object>
                               <attributes>
                                 <attribute name="text">1</attribute>
@@ -412,6 +413,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Restore default repositories</property>
                       </object>
                       <packing>
                         <property name="position">4</property>
