--- a/resources/gtk/main.glade
+++ b/resources/gtk/main.glade
@@ -80,6 +80,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
+      <object class="GtkMenuItem" id="menuitem_sorting_reset">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Reset sorting</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
       <object class="GtkCheckMenuItem" id="checkmenuitem_sidebar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
