GTK, build changes, add some hotkeys

--- a/resources/gtk/main.glade
+++ b/resources/gtk/main.glade
@@ -93,6 +93,10 @@
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">Sidebar</property>
         <property name="use_underline">True</property>
+        <accelerator key="i" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="i" signal="activate" modifiers="GDK_MOD2_MASK"/>
+        <accelerator key="Cyrillic_sha" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="Cyrillic_sha" signal="activate" modifiers="GDK_MOD2_MASK"/>
       </object>
     </child>
     <child>
@@ -107,6 +111,10 @@
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">Settings...</property>
         <property name="use_underline">True</property>
+        <accelerator key="s" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="s" signal="activate" modifiers="GDK_MOD2_MASK"/>
+        <accelerator key="Cyrillic_yeru" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="Cyrillic_yeru" signal="activate" modifiers="GDK_MOD2_MASK"/>
       </object>
     </child>
     <child>
@@ -115,6 +123,10 @@
         <property name="can_focus">False</property>
         <property name="label" translatable="yes">About...</property>
         <property name="use_underline">True</property>
+        <accelerator key="a" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="a" signal="activate" modifiers="GDK_MOD2_MASK"/>
+        <accelerator key="Cyrillic_ef" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+        <accelerator key="Cyrillic_ef" signal="activate" modifiers="GDK_MOD2_MASK"/>
       </object>
     </child>
   </object>
@@ -190,6 +202,10 @@
                     <property name="tooltip_text" translatable="yes">Update</property>
                     <property name="image">imagerefresh</property>
                     <property name="always_show_image">True</property>
+                    <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="r" signal="activate" modifiers="GDK_MOD2_MASK"/>
+                    <accelerator key="Cyrillic_ka" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="Cyrillic_ka" signal="activate" modifiers="GDK_MOD2_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
