--- a/resources/gtk/settings.glade
+++ b/resources/gtk/settings.glade
@@ -27,7 +27,7 @@
     <property name="can_focus">False</property>
     <property name="icon_name">go-up-symbolic</property>
   </object>
-  <object class="GtkListStore" id="liststore_languages">
+  <object class="GtkListStore" id="liststore_language">
     <columns>
       <!-- column-name Name -->
       <column type="gchararray"/>
@@ -298,7 +298,7 @@
                         <property name="can_focus">False</property>
                         <property name="halign">start</property>
                         <property name="hexpand">True</property>
-                        <property name="model">liststore_languages</property>
+                        <property name="model">liststore_language</property>
                         <property name="active">0</property>
                         <property name="id_column">0</property>
                         <child>
